addtocart displaycart shop változás readsingleitem változás

--- a/Frontend/shop.html
+++ b/Frontend/shop.html
@@ -14,7 +14,7 @@
     <script src="src/countdown.js"></script>
     <script src="src/index.js"></script>
     <script src="src/readSingleItem.js"></script>
-    <script src="src/isUserLoggedIn.js"></script>
+    <script src="src/isUser LoggedIn.js"></script>
 </head>
 <body onload="startHappyHour();changeLoginText()">
     <!--================ Kezdőlap Menü Rész =================-->
@@ -71,7 +71,7 @@
                         <h5>Marin Bolinas Ridge 1</h5>
                         <h4 style="color: #4CBB17;">$599</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 4</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(1)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=1" onclick="setIdOfItemToShow(1)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                         <h5>Marin Bolinas Ridge 2</h5>
                         <h4 style="color: #4CBB17;">$699</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 4.5</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(2)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=2" onclick="setIdOfItemToShow(2)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                         <h5>Marin Gestalt</h5>
                         <h4 style="color: #4CBB17;">$1099</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 5</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(3)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=3" onclick="setIdOfItemToShow(3)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         <h5>Polygon Strattos S5 - Shimano 105</h5>
                         <h4 style="color: #4CBB17;">$1299</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 5</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(4)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=4" onclick="setIdOfItemToShow(4)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                         <h5>Marin Kentfield CS2 ST</h5>
                         <h4 style="color: #4CBB17;">$769</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 4.5</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(5)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=5" onclick="setIdOfItemToShow(5)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                         <h5>Polygon Sierra Deluxe Sport</h5>
                         <h4 style="color: #4CBB17;">$599</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 4</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(6)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=6" onclick="setIdOfItemToShow(6)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                         <h5>Polygon Mt Bromo N7</h5>
                         <h4 style="color: #4CBB17;">$4399</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 5</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(7)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=7" onclick="setIdOfItemToShow(7)">Tovább</a>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                         <h5>Polygon Mt Bromo N8</h5>
                         <h4 style="color: #4CBB17;">$5999</h4>
                         <h5><img style="height: 18px;" src="assets/icons/star.png"><span class="star"> 5</span></h5>
-                        <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(8)">Tovább</a>
+                        <a class="btn btn-secondary btn-block" href="single-item.html?id=8" onclick="setIdOfItemToShow(8)">Tovább</a>
                     </div>
                 </div>
             </div>
