--- a/Frontend/Payment.html
+++ b/Frontend/Payment.html
@@ -18,6 +18,35 @@
             margin-top: 20px;
         }
     </style>
+        <header>
+            <nav class="navbar navbar-expand-md navbar-light fixed-top topnav">
+                <a class="navbar-brand" href="index.html">Go-Bicikli</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link color-white" href="index.html">Kezdőlap <span class="sr-only">(jelenlegi)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="category.html">Kategóriák</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Bolt</a></li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Kapcsolat</a></li>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a></li>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 </head>
 <body>
     <div class="payment-container">
