--- a/Frontend/LoginandRegistration.html
+++ b/Frontend/LoginandRegistration.html
@@ -84,7 +84,9 @@
             <h2>Regisztráció</h2>
             <form id="register">
                 <input type="text" id="register-username" placeholder="Felhasználónév" required>
+                <input type="text" id="full-name" placeholder="Teljes név" required>
                 <input type="password" id="register-password" placeholder="Jelszó" required>
+                <input type="password" id="confirm-password" placeholder="Jelszó megerősítése" required>
                 <button type="submit">Regisztrálás</button>
             </form>
             <p>Már van fiókod? <a href="#" id="show-login">Jelentkezz be itt!</a></p>
