--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,16 +31,13 @@
                         <a class="nav-link" href="category.html">Kategóriák</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Bolt</a></li>
+                        <a class="nav-link" href="shop.html">Bolt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Kapcsolat</a></li>
+                        <a class="nav-link" href="contact.html">Kapcsolat</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="insert-new-item.html">Új termék</a></li>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" onclick="getItems()">Biciklik listája</a></li>
+                        <a class="nav-link" href="insert-new-item.html">Új termék</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
