--- a/Frontend/shopping-cart.html
+++ b/Frontend/shopping-cart.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12">
-                    <h3 id="cartItemsHeader">A vásárlói kosarad</h3>
+                    <h3 id="cartItemsHeader">A kosarad</h3>
                     <div id="cartItems">
                         <!-- A kosár tartalma dinamikusan betöltődik -->
                     </div>
