--- a/Frontend/Payment.html
+++ b/Frontend/Payment.html
@@ -62,7 +62,11 @@
             </div>
             <div class="form-group">
                 <label for="cvv">CVV</label>
-                <input type="text" class="form-control" id="cvv" placeholder="CVV" required>
+                <input type="password" id="cvv" placeholder="CVV" required>
+            </div>
+            <div>
+                <label for="cardNumber">Kártyán Szereplő Név</label>
+                <input type="text" class="form-control" id="cardName" placeholder="Kártyán Szereplő Név" required>
             </div>
             <button type="submit" class="btn btn-primary">Fizetés most</button>
         </form>
