--- a/Frontend/Payment.html
+++ b/Frontend/Payment.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+    <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fizetés</title>
