--- a/Frontend/Payment.html
+++ b/Frontend/Payment.html
@@ -69,7 +69,7 @@
                 <label for="cardNumber">Kártyán Szereplő Név</label>
                 <input type="text" class="form-control" id="cardName" placeholder="Kártyán Szereplő Név" required>
             </div>
-            <button type="submit" class="btn btn-primary">Fizetés most</button>
+            <h2><button type="submit" class="btn btn-primary">Fizetés most</button></h2>
         </form>
     </div>
 </body>
