--- a/Frontend/insert-new-item.html
+++ b/Frontend/insert-new-item.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-group">
                         <label for="inputRate">Értékelés</label>
-                        <input type="rate" class="form-control" id="inputRate" value="4.5" placeholder="Értékelés">
+                        <input type="rate" class="form-control" id="inputRate" placeholder="Értékelés">
                     </div>
                     <div class="form-group">
                         <label for="price">Ár</label>
@@ -62,7 +62,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="itemPrice">$</span>
                             </div>
-                            <input type="text" class="form-control" id="newItemPrice" value="1000" placeholder="Ár" pattern="^[0-9]*$" required>
+                            <input type="text" class="form-control" id="newItemPrice" placeholder="Ár" pattern="^[0-9]*$" required>
                         </div>
                     </div>
                     <div class="form-group">
