--- a/Frontend/shopping-cart.html
+++ b/Frontend/shopping-cart.html
@@ -81,7 +81,7 @@
                         <!-- A kosár tartalma dinamikusan betöltődik -->
                     </div>
                     <button class="btn btn-danger" onclick="clearBasket()">Tételek eltávolítása</button>
-                    <a href="" class="btn btn-success">Tovább a szállításhoz</a>
+                    <a href="delivery.html" class="btn btn-success">Tovább a szállításhoz</a>
                 </div>
             </div>
         </div>
