szerzői jogok packageban index.js kedvezmény törlése

--- a/Frontend/category.html
+++ b/Frontend/category.html
@@ -168,8 +168,7 @@
     <!--================ End Categories Area =================-->
     <!--================ Start Footer Area =================-->
     <footer class="page-footer font-small">
-        <div class="footer-copyright text-center py-3">© 2025 Copyright:
-            <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
+        <div class="footer-copyright text-center py-3">© 2025 Copyright
         </div>
     </footer>
     <!--================ End Footer Area =================-->
