--- a/Frontend/insert-new-item.html
+++ b/Frontend/insert-new-item.html
@@ -78,8 +78,7 @@
     </br>
     <!--================ Kezdőlap Lábjegyzet Terület =================-->
     <footer class="page-footer font-small">
-        <div class="footer-copyright text-center py-3">© 2025 Szerzői jogok:
-            <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
+        <div class="footer-copyright text-center py-3">© 2025 Szerzői jogok
         </div>
     </footer>
     <!--================ Vége a Lábjegyzet Területnek =================-->
