--- a/Frontend/shop.html
+++ b/Frontend/shop.html
@@ -48,18 +48,6 @@
         </nav>
     </header>
     <!--================ Vége a Kezdőlap Menü Résznek =================-->
-
-    <!--================ Happy Hour Rész =================-->
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-10 pt-5 text-center " style="height: 170px;" id="happyHour2">
-                <h5>A Happy Hour vége:</h5> 
-                <p class="display-4" id="happyHour"></p>
-            </div>
-        </div>
-    </div>
-    <!--================ Happy Hour Vége =================-->
-
     <!--================ Kezdő Shop Galéria Rész =================-->
     <div class="container-fluid">
         <h2 class="pt-4 pl-3">Kerékpár galéria</h2>
@@ -158,8 +146,7 @@
     </br>
     <!--================ Kezdő Footer Rész =================-->
     <footer class="page-footer font-small">
-        <div class="footer-copyright text-center py-3">© 2025 Copyright:
-            <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
+        <div class="footer-copyright text-center py-3">© 2025 Copyright
         </div>
     </footer>
     <!--================ Vége a Footer Rész =================-->
