--- a/Frontend/shopping-cart.html
+++ b/Frontend/shopping-cart.html
@@ -89,8 +89,7 @@
     <!--================ Bolt Galéria Vége =================-->
     <!--================ Kezdődik a Lábléc Rész =================-->
     <footer class="page-footer font-small">
-        <div class="footer-copyright text-center py-3">© 2025 Copyright:
-            <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
+        <div class="footer-copyright text-center py-3">© 2025 Copyright
         </div>
     </footer>
     <!--================ Lábléc Vége =================-->
