--- a/Frontend/single-item.html
+++ b/Frontend/single-item.html
@@ -162,8 +162,7 @@
     <!--================ Hírlevél Feliratkozás Vége =================-->
     <!--================ Lábléc Kezdete =================-->
     <footer class="page-footer font-small">
-        <div class="footer-copyright text-center py-3">© 2025 Szerzői jog:
-            <a href="mailto:kiss.attila.roland.26@dszcbaross.edu.hu"> kiss.attila.roland.26@dszcbaross.edu.hu</a>
+        <div class="footer-copyright text-center py-3">© 2025 Szerzői jog
         </div>
     </footer>
     <!--================ Lábléc Vége =================-->
