--- a/Frontend/LoginandRegistration.html
+++ b/Frontend/LoginandRegistration.html
@@ -114,7 +114,7 @@
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
 
-            // A felhasználónevet és jelszót tároljuk a localStorage-ban (csak bemutató céljából)
+            // A felhasználónevet és jelszót tároljuk a localStorage-ban 
             localStorage.setItem(username, password);
             alert('Sikeres regisztráció! Most már be tudsz jelentkezni.');
             document.getElementById('register-form').style.display = 'none';
