--- a/Frontend/single-item.html
+++ b/Frontend/single-item.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- CSS @media-hoz -->
+    <meta content="width=device-width, initial-scale=1" name="viewport" /> 
     <title>Go-Bicikli Bolt - Termék hozzáadása</title>
     <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <link rel="stylesheet" href="css/style.css">
