--- a/Frontend/Delivery.html
+++ b/Frontend/Delivery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szállítás</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
