--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -25,24 +25,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link color-white" href="public/index.html">Kezdőlap</a>
+                        <a class="nav-link color-white" href="index.html">Kezdőlap</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="public/category.html">Kategóriák</a>
+                        <a class="nav-link" href="category.html">Kategóriák</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="public/shop.html">Bolt</a>
+                        <a class="nav-link" href="shop.html">Bolt</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="public/contact.html">Kapcsolat</a>
+                        <a class="nav-link" href="contact.html">Kapcsolat</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="public/insert-new-item.html">Új termék</a>
+                        <a class="nav-link" href="insert-new-item.html">Új termék</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="public/shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a></li>
+                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a></li>
                     </li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center" style="width: 95%; margin: auto;">
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="public/categories/mountain.html">
+                <a class="cat-home" href="categories/mountain.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Marin Bolinas Ridge 1 Photo.jpg" alt="Hegyi" class="card-img-top">
                         <div class="card-body pb-0">
@@ -82,7 +82,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="public/categories/gravel.html">
+                <a class="cat-home" href="categories/gravel.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Marin Gestalt Photo.jpg" alt="Gravel" class="card-img-top">
                         <div class="card-body pb-0">
@@ -92,7 +92,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="public/categories/road.html">
+                <a class="cat-home" href="categories/road.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Polygon Strattos S5 - Shimano 105 Photo.jpg" alt="Út" class="card-img-top">
                         <div class="card-body pb-0">
@@ -102,7 +102,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="public/categories/city.html">
+                <a class="cat-home" href="categories/city.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Marin Kentfield CS2 ST Photo.jpg" alt="Városi" class="card-img-top">
                         <div class="card-body pb-0">
@@ -112,7 +112,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="public/categories/electric.html">
+                <a class="cat-home" href="categories/electric.html">
                     <div class="card mx-auto text-center pb-0">
                     <img src="assets/images/Polygon Mt Bromo N7 Photo.jpg" alt="Elektromos" class="card-img-top">
                         <div class="card-body">
@@ -128,7 +128,7 @@
     <!--================ Kezdőlap Üzenet Terület =================-->
     <div class="text-center pt-1">
         <h2><small>Minden megvásárolt biciklinkre 5 év garancia jár!</small></h2>
-        <a class="btn btn-secondary" href="public/shop.html">Vásárolj Most</a>
+        <a class="btn btn-secondary" href="shop.html">Vásárolj Most</a>
     </div>
     <!--================ Vége a Kezdőlap Üzenet Területnek =================-->
     </br>
