--- a/Frontend/public/home.html
+++ b/Frontend/public/home.html
@@ -42,7 +42,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a></li>
+                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="../Frontend/assets/icons/shopping-cart-white.png"></a></li>
                     </li>
                 </ul>
             </div>
