--- a/Frontend/public/home.html
+++ b/Frontend/public/home.html
@@ -72,7 +72,7 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center" style="width: 95%; margin: auto;">
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="categories/mountain.html">
+                <a class="cat-home" href="..Frontend/categories/mountain.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Marin Bolinas Ridge 1 Photo.jpg" alt="Hegyi" class="card-img-top">
                         <div class="card-body pb-0">
@@ -82,7 +82,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="categories/gravel.html">
+                <a class="cat-home" href="..Frontend/categories/gravel.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Marin Gestalt Photo.jpg" alt="Gravel" class="card-img-top">
                         <div class="card-body pb-0">
@@ -92,7 +92,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="categories/road.html">
+                <a class="cat-home" href="..Frontend/categories/road.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Polygon Strattos S5 - Shimano 105 Photo.jpg" alt="Út" class="card-img-top">
                         <div class="card-body pb-0">
@@ -102,7 +102,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="categories/city.html">
+                <a class="cat-home" href="..Frontend/categories/city.html">
                     <div class="card mx-auto text-center">
                     <img src="assets/images/Marin Kentfield CS2 ST Photo.jpg" alt="Városi" class="card-img-top">
                         <div class="card-body pb-0">
@@ -112,7 +112,7 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="categories/electric.html">
+                <a class="cat-home" href="..Frontend/categories/electric.html">
                     <div class="card mx-auto text-center pb-0">
                     <img src="assets/images/Polygon Mt Bromo N7 Photo.jpg" alt="Elektromos" class="card-img-top">
                         <div class="card-body">
