javascript fájlok képek áttétele

--- a/Frontend/public/home.html
+++ b/Frontend/public/home.html
@@ -74,7 +74,7 @@
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
                 <a class="cat-home" href="..Frontend/categories/mountain.html">
                     <div class="card mx-auto text-center">
-                    <img src="assets/images/Marin Bolinas Ridge 1 Photo.jpg" alt="Hegyi" class="card-img-top">
+                    <img src="frontend/assets/images/Marin Bolinas Ridge 1 Photo.jpg" alt="Hegyi" class="card-img-top">
                         <div class="card-body pb-0">
                             <h4 class="card-title">Hegyi</h4>
                         </div>
