--- a/Frontend/public/category.html
+++ b/Frontend/public/category.html
@@ -52,11 +52,11 @@
             <div class="col-12 col-sm-3 col-md-3 col-lg-3 pt-2 p-0">
                 <ul class="vertical-nav navbar-nav">
                     <h2 class="vertical-nav-element" style="background-color: #D8D2CB;"><small>Kategóriák:</small></h2>
-                    <li><a href="categories/mountain.html">Hegyi</a></li>
-                    <li><a href="categories/gravel.html">Gravel</a></li>
-                    <li><a href="categories/road.html">Út</a></li>
-                    <li><a href="categories/city.html">Városi</a></li>
-                    <li><a href="categories/electric.html">Elektromos</a></li>
+                    <li><a href="mountain.html">Hegyi</a></li>
+                    <li><a href="gravel.html">Gravel</a></li>
+                    <li><a href="road.html">Út</a></li>
+                    <li><a href="city.html">Városi</a></li>
+                    <li><a href="electric.html">Elektromos</a></li>
                 </ul>
             </div>
             <div class="col-12 col-sm-9 col-md-9 col-lg-9 pt-2 pt-4">
@@ -69,14 +69,14 @@
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Bolinas Ridge 1 Blue.jpg" alt="Hegyi" class="galery-card-photo">
+                                    <img src="images/Marin Bolinas Ridge 1 Blue.jpg" alt="Hegyi" class="galery-card-photo">
                                     <h5>Marin Bolinas Ridge 1</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(1)">Tovább</a>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Bolinas Ridge 2 Black.jpg" alt="Hegyi" class="galery-card-photo">
+                                    <img src="images/Marin Bolinas Ridge 2 Black.jpg" alt="Hegyi" class="galery-card-photo">
                                     <h5>Marin Bolinas Ridge 2</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(2)">Tovább</a>
                                 </div>
@@ -92,7 +92,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Gestalt Blue.jpg" alt="Gravel" class="galery-card-photo">
+                                    <img src="images/Marin Gestalt Blue.jpg" alt="Gravel" class="galery-card-photo">
                                     <h5>Marin Gestalt</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(3)">Tovább</a>
                                 </div>
@@ -108,7 +108,7 @@
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Strattos S5 - Shimano 105.jpg" alt="Út" class="galery-card-photo">
+                                    <img src="images/Polygon Strattos S5 - Shimano 105.jpg" alt="Út" class="galery-card-photo">
                                     <h5>Polygon Strattos S5 - Shimano 105</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(4)">Tovább</a>
                                 </div>
@@ -124,14 +124,14 @@
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Marin Kentfield CS2 ST Grey.jpg" alt="Városi" class="galery-card-photo">
+                                    <img src="images/Marin Kentfield CS2 ST Grey.jpg" alt="Városi" class="galery-card-photo">
                                     <h5>Marin Kentfield CS2 ST</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(5)">Tovább</a>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Sierra Deluxe Sport.jpg" alt="Városi" class="galery-card-photo">
+                                    <img src="images/Polygon Sierra Deluxe Sport.jpg" alt="Városi" class="galery-card-photo">
                                     <h5>Polygon Sierra Deluxe Sport</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(6)">Tovább</a>
                                 </div>
@@ -147,14 +147,14 @@
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Mt Bromo N7.jpg" alt="Elektromos" class="galery-card-photo">
+                                    <img src="images/Polygon Mt Bromo N7.jpg" alt="Elektromos" class="galery-card-photo">
                                     <h5>Polygon Mt Bromo N7</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(7)">Tovább</a>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="assets/images/Polygon Mt Bromo N8.jpg" alt="Elektromos" class="galery-card-photo">
+                                    <img src="images/Polygon Mt Bromo N8.jpg" alt="Elektromos" class="galery-card-photo">
                                     <h5>Polygon Mt Bromo N8</h5>
                                     <a class="btn btn-secondary btn-block" href="single-item.html" onclick="setIdOfItemToShow(8)">Tovább</a>
                                 </div>
