--- a/Frontend/public/electric.html
+++ b/Frontend/public/electric.html
@@ -61,16 +61,23 @@
             </div>
             <div class="col-12 col-sm-9 col-md-9 col-lg-9 pt-2 pt-4">
                 <div>
-                    <h3>Road bikes</h3>
+                    <h3>Electric bikes</h3>
                     <hr>
-                    <p>Road bikes are perfect for people who want to ride—ideal for riders who want to jump on the bike and ride with no destination.</p>
+                    <p>Strength and durability have not been skimped; instead, Mt Bromo N utilizes Shimano’s lightweight 504 Wh integrated battery to keep the front end light and the bike, as a whole, more balanced and playful.
                     <div class="container">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="../assets/images/Polygon Strattos S5 - Shimano 105.jpg" alt="Mountain" class="galery-card-photo">
-                                    <h5>Polygon Strattos S5 - Shimano 105</h5>
-                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(4)">Read more</a>
+                                    <img src="images/Polygon Mt Bromo N7.jpg" alt="Mountain" class="galery-card-photo">
+                                    <h5>Polygon Mt Bromo N7</h5>
+                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(7)">Read more</a>
+                                </div>
+                            </div>
+                            <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
+                                <div class="galery-card">
+                                    <img src="images/Polygon Mt Bromo N8.jpg" alt="Mountain" class="galery-card-photo">
+                                    <h5>Polygon Mt Bromo N8</h5>
+                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(8)">Read more</a>
                                 </div>
                             </div>
                         </div>
