--- a/Frontend/public/home.html
+++ b/Frontend/public/home.html
@@ -42,7 +42,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="../Frontend/assets/icons/shopping-cart-white.png"></a></li>
+                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="assets/icons/shopping-cart-white.png"></a></li>
                     </li>
                 </ul>
             </div>
@@ -72,9 +72,9 @@
     <div class="container-fluid">
         <div class="row justify-content-md-center" style="width: 95%; margin: auto;">
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="..Frontend/categories/mountain.html">
+                <a class="cat-home" href="mountain.html">
                     <div class="card mx-auto text-center">
-                    <img src="frontend/assets/images/Marin Bolinas Ridge 1 Photo.jpg" alt="Hegyi" class="card-img-top">
+                    <img src="images/Marin Bolinas Ridge 1 Photo.jpg" alt="Hegyi" class="card-img-top">
                         <div class="card-body pb-0">
                             <h4 class="card-title">Hegyi</h4>
                         </div>
@@ -82,9 +82,9 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="..Frontend/categories/gravel.html">
+                <a class="cat-home" href="gravel.html">
                     <div class="card mx-auto text-center">
-                    <img src="assets/images/Marin Gestalt Photo.jpg" alt="Gravel" class="card-img-top">
+                    <img src="images/Marin Gestalt Photo.jpg" alt="Gravel" class="card-img-top">
                         <div class="card-body pb-0">
                             <h4 class="card-title">Terep</h4>
                         </div>
@@ -92,9 +92,9 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="..Frontend/categories/road.html">
+                <a class="cat-home" href="road.html">
                     <div class="card mx-auto text-center">
-                    <img src="assets/images/Polygon Strattos S5 - Shimano 105 Photo.jpg" alt="Út" class="card-img-top">
+                    <img src="images/Polygon Strattos S5 - Shimano 105 Photo.jpg" alt="Út" class="card-img-top">
                         <div class="card-body pb-0">
                             <h4 class="card-title">Út</h4>
                         </div>
@@ -102,9 +102,9 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="..Frontend/categories/city.html">
+                <a class="cat-home" href="city.html">
                     <div class="card mx-auto text-center">
-                    <img src="assets/images/Marin Kentfield CS2 ST Photo.jpg" alt="Városi" class="card-img-top">
+                    <img src="images/Marin Kentfield CS2 ST Photo.jpg" alt="Városi" class="card-img-top">
                         <div class="card-body pb-0">
                             <h4 class="card-title">Városi</h4>
                         </div>
@@ -112,9 +112,9 @@
                 </a>
             </div>
             <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
-                <a class="cat-home" href="..Frontend/categories/electric.html">
+                <a class="cat-home" href="electric.html">
                     <div class="card mx-auto text-center pb-0">
-                    <img src="assets/images/Polygon Mt Bromo N7 Photo.jpg" alt="Elektromos" class="card-img-top">
+                    <img src="images/Polygon Mt Bromo N7 Photo.jpg" alt="Elektromos" class="card-img-top">
                         <div class="card-body">
                             <h4 class="card-title">Elektromos</h4>
                         </div>
