--- a/Frontend/public/mountain.html
+++ b/Frontend/public/mountain.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" /> <!-- for css @media -->
     <title>Go-Bicikli Shop - Home</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
+    <link rel="icon" type="image/x-icon" href="../assets/images/gb-logo.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="src/index.js"></script>
-    <script src="src/readSingleItem.js"></script>
-    <script src="src/isUserLoggedIn.js"></script>
+    <script src="../src/index.js"></script>
+    <script src="../src/readSingleItem.js"></script>
+    <script src="../src/isUserLoggedIn.js"></script>
 </head>
 <body onload="changeLoginText()">
     <!--================ Start Header Menu Area =================-->
@@ -25,21 +25,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link color-white" href="home.html">Home</a>
+                        <a class="nav-link color-white" href="../home.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="category.html">Categories</a>
+                        <a class="nav-link" href="../category.html">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a></li>
+                        <a class="nav-link" href="../shop.html">Shop</a></li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a></li>
+                        <a class="nav-link" href="../contact.html">Contact</a></li>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="shopping-cart.html"><img style="height: 30px;" src="../assets/icons/shopping-cart-white.png"></a></li>
+                        <a class="nav-link" href="../shopping-cart.html"><img style="height: 30px;" src="../assets/icons/shopping-cart-white.png"></a></li>
                     </li>
                 </ul>
             </div>
@@ -61,23 +61,24 @@
             </div>
             <div class="col-12 col-sm-9 col-md-9 col-lg-9 pt-2 pt-4">
                 <div>
-                    <h3>City bikes</h3>
+                    <h3>Mountain Bikes</h3>
                     <hr>
-                    <p>Are you looking to cruise along the beach? Want to relax on the way to your next coffee? or just want to ride in comfort? These bikes are perfect for you.</p>
+                    <p>Mountain Bikes are perfect for riders who want a comfortable commute, ride with the family and get off the beaten track.
+                    </br>Also are perfect for rides that include a bit of everything. Long undulating terrain, technical terrain and exciting descents.</p>
                     <div class="container">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="../assets/images/Marin Kentfield CS2 ST Grey.jpg" alt="Mountain" class="galery-card-photo">
-                                    <h5>Marin Kentfield CS2 ST</h5>
-                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(5)">Read more</a>
+                                    <img src="images/Marin Bolinas Ridge 1 Blue.jpg" alt="Mountain" class="galery-card-photo">
+                                    <h5>Marin Bolinas Ridge 1</h5>
+                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(1)">Read more</a>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
+                            <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3">
                                 <div class="galery-card">
-                                    <img src="../assets/images/Polygon Sierra Deluxe Sport.jpg" alt="Mountain" class="galery-card-photo">
-                                    <h5>Polygon Sierra Deluxe Sport</h5>
-                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(6)">Read more</a>
+                                    <img src="images/Marin Bolinas Ridge 2 Black.jpg" alt="Mountain" class="galery-card-photo">
+                                    <h5>Marin Bolinas Ridge 2</h5>
+                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(2)">Read more</a>
                                 </div>
                             </div>
                         </div>
