--- a/Frontend/public/road.html
+++ b/Frontend/public/road.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../src/index.js"></script>
-    <script src="../src/readSingleItem.js"></script>
-    <script src="../src/isUserLoggedIn.js"></script>
+    <script src="src/index.js"></script>
+    <script src="src/readSingleItem.js"></script>
+    <script src="src/isUserLoggedIn.js"></script>
 </head>
 <body onload="changeLoginText()">
     <!--================ Start Header Menu Area =================-->
@@ -61,16 +61,16 @@
             </div>
             <div class="col-12 col-sm-9 col-md-9 col-lg-9 pt-2 pt-4">
                 <div>
-                    <h3>Gravel bikes</h3>
+                    <h3>Road bikes</h3>
                     <hr>
-                    <p>Light, fast and agile, our performance road bikes are perfect for taking that local KOM or winning the next crit race.</p>
+                    <p>Road bikes are perfect for people who want to ride—ideal for riders who want to jump on the bike and ride with no destination.</p>
                     <div class="container">
                         <div class="row">
                             <div class="col-12 col-lg-4 col-md-5 col-sm-12 col-xl-3 mb-2">
                                 <div class="galery-card">
-                                    <img src="../assets/images/Marin Gestalt Blue.jpg" alt="Mountain" class="galery-card-photo">
-                                    <h5>Marin Gestalt</h5>
-                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(3)">Read more</a>
+                                    <img src="images/Polygon Strattos S5 - Shimano 105.jpg" alt="Mountain" class="galery-card-photo">
+                                    <h5>Polygon Strattos S5 - Shimano 105</h5>
+                                    <a class="btn btn-secondary btn-block" href="../single-item.html" onclick="setIdOfItemToShow(4)">Read more</a>
                                 </div>
                             </div>
                         </div>
